--- a/example/index.html
+++ b/example/index.html
@@ -1,15 +1,17 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Playground</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Playground</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script src="./index.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script src="./index.tsx"></script>
+  </body>
 </html>
